--- a/templates/book/add.html.twig
+++ b/templates/book/add.html.twig
@@ -9,6 +9,7 @@
 {{ form_row(form.category) }}
 {{ form_row(form.publication_Date) }}
 {{ form_row(form.published) }}
+{{ form_row(form.ref) }}
 
 
 <button type="submit" class="btn btn-primary">Add Book</button>
