--- a/templates/book/affiche_book.html.twig
+++ b/templates/book/affiche_book.html.twig
@@ -10,10 +10,10 @@
             <tr>
                 
                 <th>Title</th>
-                <th>Category</th>
-                <th>Author</th>
                 <th>Publication Date</th>
                 <th>Published</th>
+                <th>Category</th>
+                <th>Author</th>
                 <th>Actions</th>
             </tr>
         </thead>
@@ -22,13 +22,13 @@
                 <tr>
                     
                     <td>{{ book.title }}</td>
-                    <td>{{ book.category }}</td>
-                    <td>{{ book.author.username ?? 'No Author' }}</td> {# Assuming "author" is a property referencing the Author entity #}
                     <td>{{ book.publicationDate|date('Y-m-d') }}</td> {# Format the date as needed #}
                     <td>{{ book.published ? 'Yes' : 'No' }}</td>
+                    <td>{{ book.category }}</td>
+                    <td>{{ book.author.username ?? 'No Author' }}</td> {# Assuming "author" is a property referencing the Author entity #}
                     <td>
-                        {#<a href="{{ path('app_edit_book', {'ref': book.ref}) }}">Edit</a>
-                        <a href="{{ path('app_delete_book', {'id': book.id}) }}">Delete</a>#}
+                        <a href="{{ path('app_edit_book', {'ref': book.ref}) }}">Edit</a>
+                        <a href="{{ path('app_delete_book', {'ref': book.ref}) }}">Delete</a>
                     </td>
                 </tr>
             {% endfor %}
