--- a/templates/book/affiche_book.html.twig
+++ b/templates/book/affiche_book.html.twig
@@ -29,6 +29,7 @@
                     <td>
                         <a href="{{ path('app_edit_book', {'ref': book.ref}) }}">Edit</a>
                         <a href="{{ path('app_delete_book', {'ref': book.ref}) }}">Delete</a>
+                        <a href="{{ path('app_show_book', {'ref': book.ref}) }}">Show</a>
                     </td>
                 </tr>
             {% endfor %}
